--- a/css/AboutUs_Contact.css
+++ b/css/AboutUs_Contact.css
@@ -1,11 +1,71 @@
 
 body {
-    background: #a3a7ae;  }
+    color:#333;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);  }
+
+/* Header */
+h2 {
+    padding: 50px;
+}
+
+nav {
+    padding: 15px 30px 30px 15px;
+    display: block;
+    color: rgba(255, 255, 255, .25);
+}
+
+.masthead {
+    margin-bottom: 2rem;
+  }
+  
+.masthead-brand {
+    margin-bottom: 0;
+  }
+  
+.nav-masthead .nav-link {
+    padding: .25rem 0;
+    font-weight: 700;
+    color: rgba(255, 255, 255, .5);
+    background-color: transparent;
+    border-bottom: .25rem solid transparent;
+  }
+  
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+    border-bottom-color: rgba(255, 255, 255, .25);
+  }
+  
+.nav-masthead .nav-link + .nav-link {
+    margin-left: 1rem;
+  }
+  
+.nav-masthead .active {
+    color: rgba(255, 255, 255, .25);
+    border-bottom-color: #fff;
+  }
+  
+  @media (min-width: 48em) {
+    .masthead-brand {
+      float: left;
+    }
+    .nav-masthead {
+      float: right;
+    }
+  }
+  
+  /*main*/
+  
+  .cover-heading{
+    font-size: 65px;
+    padding: 50px 0 25px 0;
+    
+  }
+  .text {
+    font-size: 25px;
+  }  
 
 /* ABOUT US*/
-h2 {
-    padding: 20px;
-}
 
 .featurette-heading {
     padding: 25px;
@@ -39,10 +99,10 @@ form {
     font-size: 12px;
 }
 .col-md-5 {
-    padding: 150px 15px 20px 35px; 
+    padding: 205px 15px 20px 35px; 
 }
 
 footer {
-    margin: 15px;
+    padding: 10px, 0px, 40px, 15px;
 }
 
