--- a/css/final.css
+++ b/css/final.css
@@ -4,8 +4,7 @@
 a,
 a:focus,
 a:hover {
-  color: rgb(97, 91, 91);
-}
+  color: rgb(97, 91, 91);  }
 
 /* Custom default button */
 .btn-secondary,
@@ -23,7 +22,7 @@ body {
     height: 100%;
     margin: 0%;
     padding: 0%;
-    color: #333;
+    color: #333;  
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);  }
 
 .flex {
@@ -60,13 +59,11 @@ body {
     }
   }
 
-.cover-container {
-    max-width: 42em;  }
-
 /* HEADER */
 h2 {
     padding: 50px 20px;
-    font-size: 3.5em  }
+    font-size: 3.5em;  
+    background-color: transparent  }
 
 nav {
     padding: 15px 30px 30px 15px;
@@ -125,7 +122,8 @@ nav {
 /* POSTS */
 
 .row {
-    padding: 0 30px;  }
+    padding: 0 30px; 
+    width: 100%; }
 
 .gallery {
     display: -webkit-flex;
@@ -139,6 +137,58 @@ nav {
     display: flex;  }
 
 /* POSTS */
+
+/* NEWS FEED */
+
+/*gallery*/
+.tres {
+    width: 100%;
+    max-width: 100rem;
+    margin: 0 auto;
+    padding: 0 2rem 2rem;
+  }
+
+.dos {
+    display: flex;
+    flex-wrap: wrap;
+    /* Compensate for excess margin on outer gallery flex items */
+    margin: -1rem -1rem;
+    display: inline-block;
+  }
+  
+.gallery-item {
+    /* Minimum width of 24rem and grow to fit available space */
+    flex: auto;
+    /* Margin value should be half of grid-gap value as margins on flex items don't collapse */
+    margin: 1rem;
+    overflow: inherit;  }
+  
+.puerta_de_alcala {
+    display: flex;
+    flex-wrap: wrap;
+    justify-items: auto;
+    width: 60%;
+    height: 60%;
+    object-fit: cover;
+    transition: transform 400ms ease-out;
+  }
+  
+.puerta_de_alcala:hover {
+    transform: scale(2);
+  }
+  @supports (display: grid) {
+    .dos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+      grid-gap: 2rem;
+    }
+  
+    .dos,
+    .gallery-item {
+      margin: 0;
+    }
+  }    
+/* NEWS FEED*/
 
 /* ABOUT US*/
 
