--- a/css/final.css
+++ b/css/final.css
@@ -24,7 +24,6 @@ a:hover {
 body {
     background-color: #fff;
     width: 100%;
-    margin: 0%;
     color: #333;  
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);  }
 
@@ -225,11 +224,11 @@ form {
     font-size: 12px;  }
 
 .col-md-5 {
-    padding: 205px 15px 20px 35px;  }
+    padding: 240px 15px 20px 35px;  }
 
     /* CONTACT */
 .footer {
     text-align: center;
-    margin: 20px;
+    margin-bottom: 40px;
 }
 
